syntax = "proto3";
package desk_service;

message GetStateRequest {}
message GetStateResponse {
	float position = 1;
	float velocity = 2;
}

message SubscribeStateRequest {}
message SubscribeStateResponse {
	float position = 1;
	float velocity = 2;
}

message StopRequest {}
message StopResponse {}

message StartMoveRequest {
	float target = 1;
}
message StartMoveResponse {}

service DeskService {
	rpc GetState(GetStateRequest) returns (GetStateResponse);
	rpc SubscribeState(SubscribeStateRequest)
	    returns (stream SubscribeStateResponse);
	rpc Stop(StopRequest) returns (StopResponse);
	rpc StartMove(StartMoveRequest) returns (StartMoveResponse);
}
